# riotwatcher

./: .gitignore  ChangeLog.md  README.md  hie.yaml  package.yaml  riotwatcher.cabal  riotwatcher.cabal.save0
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Champion.hs  Lib.hs  LoLDatas.hs  Spectator.hs  Summoner.hs
src/API/: Account.hs  Champion.hs  ChampionMastery.hs  League.hs  Match.hs  Spectator.hs  Summoner.hs
test/: Spec.hs
