cabal-version:      2.4
name:               riotwatcher
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             p0ngch4ng
maintainer:         p0ngch4ng@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    ChangeLog.md
    README.md

library
    exposed-modules:
        LoLDatas
        API.Account
        API.Match
        API.ChampionMastery
        API.Summoner
        API.Champion
        API.Spectator
        API.League

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions:
        DeriveGeneric DuplicateRecordFields FlexibleInstances
        FunctionalDependencies TemplateHaskell

    build-depends:
        base ^>=4.15.0.0,
        containers ^>=0.6.4.1

    hs-source-dirs:   src
    default-language: Haskell2010

executable riotwatcher
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions:
        DeriveGeneric DuplicateRecordFields FlexibleInstances
        FunctionalDependencies TemplateHaskell

    build-depends:
        base ^>=4.15.0.0,
        containers ^>=0.6.4.1

    hs-source-dirs:   app
    default-language: Haskell2010
