cabal-version:      3.4
name:               riotwatcher
version:            0.1.0.0
maintainer:         p0ngch4ng@gmail.com
author:             p0ngch4ng
extra-source-files:
    ChangeLog.md
    README.md

common shared-properties
  build-depends:
        base ^>=4.14.1.0,
        containers ^>=0.6.4.1,
        lens ^>=5.0.1,
        aeson^>=1.5.6.0,
        http-conduit^>=2.3.8
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wcompat

library
    import:  shared-properties
    exposed-modules:
        LoLDatas
        API.Account
        API.Match
        API.ChampionMastery
        API.Summoner
        API.Champion
        API.Spectator
        API.League
    hs-source-dirs:   src
   
    other-extensions:
        DeriveGeneric DuplicateRecordFields FlexibleInstances
        FunctionalDependencies TemplateHaskell

    

executable riotwatcher
    import:          shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    other-extensions:
        DeriveGeneric DuplicateRecordFields FlexibleInstances
        FunctionalDependencies TemplateHaskell
    build-depends: riotwatcher