cabal-version:      2.4
name:               riotwatcher
version:            0.1.0.0
maintainer:         p0ngch4ng@gmail.com
author:             p0ngch4ng
extra-source-files:
  ChangeLog.md
  README.md

common shared-properties
  build-depends:
    , aeson         ^>=1.5.6.0
    , base          ^>=4.14.1.0
    , containers    ^>=0.6.4.1
    , http-conduit  ^>=2.3.8
    , lens          ^>=5.0.1



library
  import:           shared-properties
  -- cabal-fmt: expand src
  exposed-modules:
    API.Account
    API.Champion
    API.ChampionMastery
    API.League
    API.Spectator
    API.Summoner
    LoLDatas
  hs-source-dirs:src
  other-extensions:
    DeriveGeneric
    DuplicateRecordFields
    FlexibleInstances
    FunctionalDependencies
    TemplateHaskell

executable riotwatcher
  import:           shared-properties
  main-is:          Main.hs
  hs-source-dirs:   app
  other-extensions:
    DeriveGeneric
    DuplicateRecordFields
    FlexibleInstances
    FunctionalDependencies
    TemplateHaskell
  build-depends:    riotwatcher
